--- a/css/css.css
+++ b/css/css.css
@@ -1,3 +1,8 @@
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+}
 *{padding: 0; margin: 0; border: 0;}
 body {
     font-family: 'Open Sans', sans-serif;
@@ -31,16 +36,22 @@ a {
     width: 100%;
     
 }
+.our_services_page {
+    background-color: white;
+    height: 500px;
+    width: 100%;
+}
 .head_button {
     color:white;
     font-weight: bold;
     border-style: none;
     background-color: black;
     outline: none;
-    padding-top: -45px;
+    padding-top: 25px;
     margin-left: 20px;
     border-bottom: 1px solid transparent;
     border-width: 3px;
+    font-size: 15px;
 }
 .head_button:hover {
     border-color: #FFA637;
@@ -136,6 +147,7 @@ ul {
     border-radius: 50%;
     display: inline-block;
     margin-left: -15px;
+    margin-bottom: 10px;
 }
 .man p {
     text-align: center;
@@ -144,7 +156,40 @@ ul {
     font-family: 'Open Sans', sans-serif;
     font-size: 13px;
 }
+.about_team_page .name {
+    margin-bottom: -15px;
+    font-weight: 600;
+    font-size: 15px;
+} 
 .man {
     text-align: center;
     display: table-cell;
+}
+.our_services_page p {
+    color:black;
+}
+.our_services_page a {
+    color:black;
+}
+.our_services_page .man div {
+    height: 80px;
+    width: 80px;
+    background-color: white;
+    border-radius: 50%;
+    display: inline-block;
+    margin-left: -15px;
+    border: 3px solid #FFAD39;
+    margin-bottom: 15px;
+
+}
+p {
+    font-family: 'Bebas Neue', cursive;
+    font-family: 'Dongle', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+}
+.our_services_page .name {
+    font-size: 17px;
+    font-weight: 600;
+    font-family: 'Open Sans', sans-serif;
+
 }
