--- a/css/css.css
+++ b/css/css.css
@@ -51,7 +51,7 @@ a {
     margin-left: 20px;
     border-bottom: 1px solid transparent;
     border-width: 3px;
-    font-size: 15px;
+    font-size: 12px;
 }
 .head_button:hover {
     border-color: #FFA637;
@@ -61,8 +61,9 @@ a {
     margin-top: -45px;
 }
 .welcome_text {
+    
     padding-right: 10px;
-    font-size: 30px;
+    font-size: 40px;
     display: table-cell;
 }
 .orange {
@@ -70,18 +71,16 @@ a {
     font-weight: bold;
     color:#FFA637;
     margin-top: -75px;
-    margin-left: 205px;
-    font-size: 30px;
+    font-size: 40px;
 }
 #welcome_text {
     display: table;
     margin-top: 200px;
-    margin-left: 35%;
-    text-align: center;
+    margin-left: 30%;
 }
 .welcome_text_black {
     margin-top: -370px;
-    margin-left: 740px;
+    margin-left: 715px;
     font-size: 30px;
     color: black; 
     padding-bottom: 10px;
@@ -98,12 +97,15 @@ a {
     margin-top: 10px;
 }
 .past_welcome_text_black {
-    margin-top: -5px;
-    margin-left: 770px;
+    margin-top: 20px;
+    margin-left: 739px;
     color:black;
     font-size: 16px;
+    font-family: 'Bebas Neue', cursive;
+    font-family: 'Dongle', sans-serif;
     font-family: 'Open Sans', sans-serif;
     text-align: left;
+    
 }
 .about_page {
     background-color: white;
@@ -119,7 +121,8 @@ a {
     
 } 
 .about_ul {
-    margin-left: 750px;
+    margin-top: 25px;
+    margin-left: 739px;
 }
 ul {
     list-style-image: url(../images/znak.png);
@@ -192,4 +195,88 @@ p {
     font-weight: 600;
     font-family: 'Open Sans', sans-serif;
 
+}
+.contact {
+    background-color: black;
+    height: 650px;
+    width: 100%;
+    text-align: center;
+}
+.end {
+    background-color: white;
+    height: 100px;
+    width: 100%;
+    text-align: center;
+}
+.contact * {
+    text-align: center;
+}
+.contact a {
+    color:white;
+    width: 30px;
+    margin-left: 0px;
+}
+.inp_table {
+    margin-top: 80px;
+    display: table;
+
+}
+.inp .inp_name {
+    display: table-cell;
+}
+
+.inp .inp_email {
+    display: table-cell;
+    padding-left: 50px;
+    
+}
+
+.inp .inp_text {
+    margin-top: 25px;
+}
+
+.inp {
+    display: inline-block;
+    text-align: center;
+}
+.inp_table input {
+    border: 1px solid #999999;
+    width: 250px;
+    height: 30px; 
+}
+.inp p {
+    text-align: left;
+}
+.inp_text input {
+    margin-left: -2px;
+    width: 555px;
+    height: 130px;
+}
+.send_btn {
+    border: none;
+    outline: none;
+    background-color: #FCAC45;
+    width: 100px;
+    height: 30px;
+    margin-top: 25px;
+    margin-left: 453px;
+}
+.send_btn p {
+    text-align: center;
+}
+
+.logo_container {
+    text-align: center;  
+}
+
+
+.logol img {
+    height: 45px;
+    width: 45px;
+    
+}
+.logor img {
+    height: 45px;
+    width: 45px;
+    
 }
